2012-04-24  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.elements.php: Added 
	icon to the percentile bubble type of item in the visual 
	console items list for bug 3520610

2012-04-24 Miguel de Dios <miguel.dedios@artica.es>
	
	* install.php: cleaned source code style.
	
	* include/functions_graph.php: added into the src attribute the
	$config['homeurl'] in the functions "progress_bar" and
	"progress_bubble" to show the images in other paths that usually
	path.
	
	* include/functions_ui.php: fixed into the function
	"ui_process_page_head" when try to use in others paths that usually
	path (like as homeurl) and this bug have been for js and css.
	
	* operation/visual_console/public_console.php: fixed and re-design
	the page.
	
	Fixes: #3520670

2012-04-24 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/Image/image_functions.php: fixed into the function
	"createthumb" when you have a path with "." character try to extract
	the extension of file before of name of file.
	
	* include/config_process.php: disabled warning message of PHP5 about
	the timezone.
	
	Fixes: #3520657

2012-04-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Added units to legend in flash 
	charts.
	
	Fixes: #3520728

2012-04-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/estado_agente.php,
	operation/agentes/ver_agente.php,
	godmode/agentes/configurar_agente.php: Fixed some problems with
	links and new menu structure.

2012-04-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/menu.php: Fixed some problems with manage agents
	and new menu structure.

2012-04-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/agent_template.php
	godmode/agentes/module_manager_editor_common.php,
	godmode/agentes/module_manager.php,
	godmode/agentes/modificar_agente.php,
	godmode/agentes/configurar_agente.php,
	godmode/agentes/planned_downtime.php,